# live-copilot-web

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: app.rs  css.rs  error_template.rs  lib.rs  main.rs  state.rs
src/components/: nav_bar.rs
src/pages/: about.rs  home.rs  mod.rs
src/util/: local_timer.rs  logging.rs  mod.rs
style/: tailwind.css
